--- a/users/templates/users/head.html
+++ b/users/templates/users/head.html
@@ -1,7 +1,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
-	<title>Cloud Admin | Login</title>
+	<title>{% block title %}{{ title }}{% endblock title %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -13,13 +13,13 @@
     <![endif]-->
 	{% load staticfiles %} <link rel="stylesheet" type="text/css" href="{% static 'users/css/cloud-admin.css' %}" >
 
-	{% load staticfiles %} <link href="｛% static 'users/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+	{% load staticfiles %} <link href="｛% static 'users/js/font-awesome.min.css' %}" rel="stylesheet">
 	<!-- DATE RANGE PICKER -->
 	{% load staticfiles %} <link rel="stylesheet" type="text/css" href="{% static 'users/js/bootstrap-daterangepicker/daterangepicker-bs3.css' %}" />
 	<!-- UNIFORM -->
 	{% load staticfiles %} <link rel="stylesheet" type="text/css" href="{% static 'users/js/uniform/css/uniform.default.min.css' %}" />
 	<!-- ANIMATE -->
-	{% load staticfiles %} <link rel="stylesheet" type="text/css" href="{% static 'users/css/animatecss/animate.min.css' %}" />
+	{% load staticfiles %} <link rel="stylesheet" type="text/css" href="{% static 'users/js/animatecss/animate.min.css' %}" />
 	<!-- FONTS -->
 	<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 </head>
